Add black dependency
Run black on our code as well.

--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -5,11 +5,17 @@
 click
 Sphinx
 coverage
-awscli
 flake8
+black
+flake8-black
 python-dotenv>=0.5.1
 {% if cookiecutter.python_interpreter != 'python3' %}
 
 # backwards compatibility
 pathlib2
 {% endif %}
+
+# common packages
+numpy
+pandas
+scikit-learn
