--- a/{{ cookiecutter.repo_name }}/setup.cfg
+++ b/{{ cookiecutter.repo_name }}/setup.cfg
@@ -1,5 +1,25 @@
 [tool.black]
 line-length = 88
+target-version = ['py310', 'py311', 'py312']
+include = '\.pyi?$'
+exclude = '''
+(
+    /(
+        \.eggs         # exclude a few common directories in the
+    |   \.git          # root of the project
+    |   \.hg
+    |   \.mypy_cache
+    |   \.tox
+    |   \.venv
+    |   _build
+    |   buck-out
+    |   build
+    |   dist
+    )/
+)
+'''
+skip-string-normalization = true
+
 
 [flake8]
 plugins = flake8_black
